enable qr code from API,close #17
